sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:8: error: not found: value lgr
for (i <- 1 to lgr-1){
               ^AlgInsertionSort:9: error: not found: value v
 while(v<i-lgr+1){
       ^