sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {


var i:Int=0
var j:Int=0
var n:Int=getNombreValeurs()
for (i <- 1 to lgr-1){
 while(v<i-lgr+1){
   if(i-1>v){
     echange(i-1,i)
 } 
 }
}
}
   
 
 
  
 

